# clinical-data-quality-analysis

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
config/: config.yaml
data/: sample_clinical.csv
src/clinical_data_quality_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/healthcli/: cli.py  clinical_rules.py  clinical_rules_extended.py  config_loader.py  data_loader.py  fhir_models.py  logging_utils.py  main.py  pipeline.py  quality.py  quality_report.py  runner.py
tests/: test_clinical_rules.py  test_runner.py
